lib_LTLIBRARIES=librml_plain.la

librml_plain_la_SOURCES= ../common/array.c ../common/boolean.c ../common/integer.c ../common/list.c ../common/logicalvar.c ../common/real.c ../common/string.c ../common/vector.c ../common/internal.c \
 ../common/p-gccore.c ../common/p-gcuser-plain.c ../common/p-usergc.c ../common/controlflow.c \
 ../debugging/parse-command.c ../debugging/scan-command.c ../debugging/parse-rdb.c ../debugging/scan-rdb.c ../debugging/load.c \
 ../debugging/socket.c ../debugging/command.c ../debugging/handler.c ../debugging/debug.c \
../common/main.c

